# rspass

./: Cargo.toml  README.md
src/: cli.rs  encryptor.rs  error.rs  lib.rs  main.rs  vault.rs
