[package]
name = "rspass"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
argon2 = "0.4"
chacha20poly1305 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "2.0"
clap = { version = "4.5.48", features = ["derive"] }
rpassword = "7.4.0"
thiserror = "2.0.17"
rustyline = "17.0.2"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
